# FileCoffee

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env  .prettierrc.toml  Cargo.toml  Dockerfile  Dockerfile.dev
backend/src/: api.rs  config.rs  error.rs  handler.rs  ice.rs  main.rs  room.rs  slug_generator.rs  store.rs  types.rs
backend/src/handlers/: ws_handler.rs
backend/src/models/: message.rs  mod.rs  room.rs
backend/src/routes/: api.rs  mod.rs  ws.rs
backend/src/services/: mod.rs  room.rs  signaling.rs
backend/src/store/: memory.rs  mod.rs
frontend/filecoffee-frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/filecoffee-frontend/src/: App.tsx  config.ts  index.css
frontend/filecoffee-frontend/src/components/: EnterPassword.tsx  FileDownload.tsx  FileUpload.tsx  PasswordSetup.tsx  ShareLinks.tsx
frontend/filecoffee-frontend/src/components/ui/: sonner.tsx
frontend/filecoffee-frontend/src/constants/: enums.ts
frontend/filecoffee-frontend/src/hooks/: useRoomValidation.ts
frontend/filecoffee-frontend/src/lib/: download-strategies.ts  strategies.ts  utils.ts
frontend/filecoffee-frontend/src/pages/: Download.tsx  Index.tsx
