[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1.89"
rand = "0.9.2"
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.22.1"
dotenvy = "0.15.7"