[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
warp = { version = "0.4.2", features = ["websocket", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1.89"
rand = "0.8.5"
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.22.1"
dotenvy = "0.15.7"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing = "0.1.44"
argon2 = "0.5.3"
